# inovador-blogspot

./: .env  .gitignore  README.md  create_banco.py  pyproject.toml  requirements.txt  run.py  vercel.json
api/: index.py
src/app/: __init__.py  config.py  database.db  forms.py  models.py
src/app/routes/: auth.py  home.py  user.py
src/app/static/css/: style.css
src/app/templates/: base.html  cadastro.html  editar_post.html  form_post.html  home.html  login.html  perfil_posts.html  posts.html
